<resources>

    <string name="app_name">Xebia Agile Tools</string>
    <string name="choose_tool">Choose an Agile tool</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">Xebia Agile Tools - Menu</string>
    <string name="xebia_logo">Xebia logo</string>

    <string name="pokerCardsTitle">Planning Poker</string>

    <string name="chronometerTitle">Chronometer</string>
    <string name="chrono_start">Start</string>
    <string name="chrono_stop">Stop</string>
    <string name="chrono_reset">Reset</string>
    <string name="chrono_imgStatus">Chronometer status</string>
    <string name="chrono_image">Chronometer image</string>

    <string name="mooboxTitle">Moo Box</string>
    <string name="moobox_say">Say moo !</string>
    <string name="moobox_image">Cow image</string>

</resources>