<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
              android:orientation="vertical"
              android:layout_margin="50dp"
              android:padding="10dp">

    <Button
            android:id="@+id/startBtn"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/chrono_start"
            style="@style/RoundedButton"
            />
    <Button
            android:id="@+id/stopBtn"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/chrono_stop"
            style="@style/RoundedButton"
            android:visibility="gone"
            />
    <Button
            android:id="@+id/resetBtn"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/chrono_reset"
            style="@style/RoundedButton"
            />

    <Chronometer
            android:id="@+id/chronometer"
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:textSize="40sp"
            android:textStyle="bold"
            />
</LinearLayout>